# tevo

./: .gitignore  L_T.plot  Makefile  coll_ion.plot  concentration.plot  cooling.plot  dvode_f90.f90  fort.12  gamma.plot  hm.plot  lambda.plot  main  meson.build  output.plot  recombination.plot  run.sh  sigma.plot  sn-3d-planes.eps
data/: sd  t
src/: calculation.f08  calculation.f90  calculation_old.f08  constants.f08  constants.f90  cooler.f08  main.f08  main.f90  reader.f90  spectre.f90
